fixed gap

--- a/san-jose-digital/src/screens/JourneyMap/JourneyMapStyle.css
+++ b/san-jose-digital/src/screens/JourneyMap/JourneyMapStyle.css
@@ -7,6 +7,7 @@
 
 .stack {
   position: relative;
+  margin-top: -2px;
 }
 
 .digit {
